--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 
 <h1>obamastore21</h1>
 
-<a class="noeffect" href="itms-services://?action=download-manifest&url=https://obamastore21.github.io/Flappy_Bird-v1.2.plist">
-                    <span class="image" style="background-image: url('https://mtmdev.org/ipa-content/Flappy_Bird-v1.2.png')">
-                    </span><span class="comment">1.2</span><span class="name">Flappy Bird</span><span class="stars4"></span><span class="starcomment">160
-                        Ratings</span><span class="arrow"></span><span class="price">Tap to install</span></a>
+<a href="itms-services://?action=download-manifest&amp;url=https://obamastore21.github.io/flappybird.plist" role="button">Flappy Bird 1.2</a>
+
 </body>
 </html>
