--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
 <a href="itms-services://?action=download-manifest&amp;url=https://obamastore21.github.io/flappybird.plist" role="button">Flappy Bird 1.2</a>
 
+<a href="itms-services://?action=download-manifest&amp;url=https://obamastore21.github.io/recorder.plist" role="button">Record My Screen</a>
+  
 </body>
 </html>
